--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <article class="card">
           <h2>About Us</h2>
           <p>At <strong>Rang-ay Enterprises</strong>, we exist to guide Filipino, Hmong, and multicultural families on their journey toward homeownership, wealth-building, and generational legacy.</p>
-          <p>Rooted in the Ilocano word <em>“Rang-ay”</em>, meaning wealth and flourishing, we believe real estate is more than property—it’s the foundation for thriving families and futures. We support our clients whether they’re buying their first home, investing in their future through real estate, or learning how to build a portfolio that lasts generations.</p>
+          <p>Rooted in the Ilocano word <em>“Rang-ay”</em>, meaning wealth and flourishing, we believe real estate is more than property—it’s the foundation for thriving families and futures. Inspired by the Hmong word <em>“Nyiaj”</em>, meaning wealth and prosperity, we see real estate as more than just transactions—it’s about helping families thrive. Whether it’s finding a first home or investing for the next generation, we’re committed to turning every dollar of nyiaj into opportunity and growth. We support our clients whether they’re buying their first home, investing in their future through real estate, or learning how to build a portfolio that lasts generations.</p>
           <p>We’re also proud to offer life insurance education, helping families understand how to protect what they build. The Hmong community has long recognized the value of life insurance in securing financial futures—and we’re committed to bringing that same knowledge and opportunity to the Filipino community and beyond.</p>
           <p>Our mission is simple: to empower, educate, and uplift—one family, one home, and one legacy at a time.</p>
         </article>
@@ -202,7 +202,7 @@
     </main>
 
     <footer class="wrap footer">
-      <p>© <span id="year"></span> <span class="nowrap">Rang-ay Enterprises</span>. All rights reserved. Contact us at <a href="mailto:info@rnpellc.com">info@rnpellc.com</a>.</p>
+      <p>© <span id="year"></span> <span class="nowrap">Rang-ay Nyiaj Enterprises</span>. All rights reserved. Contact us at <a href="mailto:info@rnpellc.com">info@rnpellc.com</a>.</p>
     </footer>
 
     <script>
