--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Rang-ay Enterprises | Homeownership • Wealth • Legacy</title>
-    <meta name="description" content="Rang-ay Enterprises guides Filipino, Hmong, and multicultural families toward homeownership, wealth-building, and generational legacy." />
+    <title>Rang-ay Nyiaj Enterprises | Homeownership • Wealth • Legacy</title>
+    <meta name="description" content="Rang-ay Nyiaj Enterprises guides Filipino, Hmong, and multicultural families toward homeownership, wealth-building, and generational legacy." />
     <meta name="theme-color" content="#151d31" />
     <meta name="color-scheme" content="light dark" />
     <link rel="icon" href="./assets/favicon.svg" />
@@ -155,9 +155,9 @@
   <body>
     <header role="banner" aria-label="Primary">
       <div class="wrap topbar">
-        <a class="brand" href="#top" aria-label="Rang-ay Enterprises home">
+        <a class="brand" href="#top" aria-label="Rang-ay Nyiaj Enterprises home">
           <div class="logo" aria-hidden="true">RE</div>
-          <div class="name">Rang-ay Enterprises</div>
+          <div class="name">Rang-ay Nyiaj Enterprises</div>
         </a>
         <nav aria-label="Site">
           <a href="#about">About</a>
@@ -173,14 +173,14 @@
           <span class="kicker">Homeownership • Wealth • Legacy</span>
           <h1>Guidance and education for thriving families and futures</h1>
           <p>We help Filipino, Hmong, and multicultural families navigate real estate and life insurance with clarity—building strong foundations for the next generation.</p>
-          <a class="cta" href="#about" aria-label="Learn more about Rang-ay Enterprises">Learn more</a>
+          <a class="cta" href="#about" aria-label="Learn more about Rang-ay Nyiaj Enterprises">Learn more</a>
         </div>
       </section>
 
       <section id="about" class="wrap section about">
         <article class="card">
           <h2>About Us</h2>
-          <p>At <strong>Rang-ay Enterprises</strong>, we exist to guide Filipino, Hmong, and multicultural families on their journey toward homeownership, wealth-building, and generational legacy.</p>
+          <p>At <strong>Rang-ay Nyiaj Enterprises</strong>, we exist to guide Filipino, Hmong, and multicultural families on their journey toward homeownership, wealth-building, and generational legacy.</p>
           <p>Rooted in the Ilocano word <em>“Rang-ay”</em>, meaning wealth and flourishing, we believe real estate is more than property—it’s the foundation for thriving families and futures. Inspired by the Hmong word <em>“Nyiaj”</em>, meaning wealth and prosperity, we see real estate as more than just transactions—it’s about helping families thrive. Whether it’s finding a first home or investing for the next generation, we’re committed to turning every dollar of nyiaj into opportunity and growth. We support our clients whether they’re buying their first home, investing in their future through real estate, or learning how to build a portfolio that lasts generations.</p>
           <p>We’re also proud to offer life insurance education, helping families understand how to protect what they build. The Hmong community has long recognized the value of life insurance in securing financial futures—and we’re committed to bringing that same knowledge and opportunity to the Filipino community and beyond.</p>
           <p>Our mission is simple: to empower, educate, and uplift—one family, one home, and one legacy at a time.</p>
